# jarvis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  run.bat
src/: llama_interface.h  main.cpp  whisper_interface.h
